[package]
name = "waybackrust"
version = "0.2.4"
authors = ["Neolex (Kevin Hascoet) <hascoet.kevin@neolex-security.fr>"]
description = "A tool to query the WaybackMachine (https://archive.org/web/)..."
edition = "2018"
license = "GPL-3.0"

[dependencies]
clap = "2.33.0"
ansi_term = "0.12.1"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }

[target.'cfg(target_arch = "x86_64-unknown-linux-musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }