[package]
name = "waybackrust"
version = "0.2.14"
authors = ["Neolex (Kevin Hascoet) <hascoet.kevin@gmail.com>"]
description = "A tool to query the WaybackMachine (https://archive.org/web/)..."
edition = "2018"
license = "GPL-3.0"

[dependencies]
clap = "4.0.19"
ansi_term = "0.12.1"
futures = "0.3.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream","json"] }
tokio-util = "0.7"
 
[target.'cfg(target_arch = "x86_64-unknown-linux-musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
